feat(skill): 实现技能包上传与预览功能
- 新增 skill_file 表及相关实体，支持存储技能包内文件内容及元信息
- 修改 product 表结构，去除 name 唯一约束并扩展 description 字段长度
- 实现技能包上传接口，支持 zip 和 tar.gz 格式，解析 SKILL.md 并校验 YAML front matter
- 实现上传文件内容编码判断，文本内容直接保存，二进制文件 Base64 编码存储
- 支持批量 upsert skill_file 表，文件数量限制 500，单文件大小上限 5MB
- 新增公开接口获取技能包文件树、单个文件内容、所有文件及整体压缩包下载
- himarket-admin 新增技能包管理 Tab，支持拖拽上传并预览文件树及文件内容
- himarket-frontend 扩展 SkillDetail 页面，添加文件树侧边栏及文件预览功能
- 前端预览支持 markdown 渲染和 Monaco Editor，二进制文件显示不支持预览提示
- CliSelector 逻辑改造，选择技能时调用接口获取完整文件列表写入 CliSessionConfig
- generateSkillConfig 方法支持根据文件列表写入完整目录结构，兼容旧数据只写 SKILL.md
- 添加 commons-compress 依赖用于 tar.gz 解压，使用 Java 标准库解压 zip 文件
- 详细异常处理，上传时缺少关键字段返回明确错误信息
- 保留向后兼容接口 GET /skills/{productId}/download 返回原 product.document 内容
- 设计文档、需求文档和任务清单全面覆盖实现细节及验证点